--- a/public/css/pages/_dashboard.scss
+++ b/public/css/pages/_dashboard.scss
@@ -6,56 +6,53 @@ body.home {
 
 	.main-wrapper {
 		width:768px;
+		padding-left: 40px;
+		padding-right: 40px;
 		margin:auto;
 	}
 
+	.add-new-button {
+
+		text-align:center;
+		padding-top:12px;
+		position:fixed;
+		bottom: 25px;
+		right: 25px;
+		border-radius: 100%;
+		box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
+		-webkit-box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
+		background-color: $primary;
+		width: 75px;
+		height: 75px;
+		font-size: 3em;
+		color:white;
+
+	}
+
 	.spacer {
-		width:100%;
 		height:20px;
 	}
 
 	.results-wrapper {
 		margin: auto;
+		margin-top: 5px;
 		width:100%;
 		height:100%;
 		text-align: center;
 
-		div.result-create-new {
-			background-color: $lightgray;
-			border-radius: 10px;
+		.title {
+			font-size: 1.5em;
+			font-weight:700;
+			margin-bottom: 20px;
+			letter-spacing:1px;
+		}
+
+		.title-rule {
+			width: 80%;
 			position:relative;
-			top:19px;
-
-			a {
-				width:100%;
-				height:100%;
-				display:block;
-			}
-
-			.text-container {
-				position:absolute;
-				width:100%;
-				height:100%;
-
-				h2 {
-					margin-top: 10px;
-					font-size:1.75em;
-					color:$darkgray;
-				}
-
-				h2.plus {
-					font-size: 5em;
-					margin-top:37px;
-					font-weight: bold;
-				}
-
-				h2.add-new {
-					letter-spacing: 1px;
-					font-weight: bold;
-					text-transform: uppercase;
-				}
-
-			}
+			left:10%;
+			border-bottom: 1px solid $medgray;
+			margin-bottom: 25px;
 
 		}
 
@@ -99,6 +96,8 @@ body.home {
 	z-index: 100;
 	top:100px;
 	text-align: left;
+	margin-bottom: 100px;
+
 	.result-block {
 
 		margin-top:70px;
@@ -154,6 +153,25 @@ body.home {
 
 		}
 
+	}
+
+	.no-result-block {
+		text-align: center;
+		margin-top: 45px;
+	}
+
+	.no-result-heading {
+		letter-spacing: 1px;
+		color:$secondary;
+		font-weight:700;
+		font-size: 2em;
+		padding-top: 23px;
+		margin-bottom: 15px;
+	}
+
+	.no-result-message {
+		color: $darkgray;
+		font-size: 1.25em
 	}
 
 	.rule {
