--- a/public/css/pages/_login.scss
+++ b/public/css/pages/_login.scss
@@ -35,6 +35,7 @@ input {
 		margin:0 auto;
 		width:90%;
 		color:$darkgray;
+		@include lato;
 	}
 
 	.input-container {
