--- a/public/css/pages/_member.scss
+++ b/public/css/pages/_member.scss
@@ -5,9 +5,13 @@
 	padding-right: 40px;
 	margin:auto;
 
+	.member-header-container {
+		margin-top: 15px;
+	}
+
 	.member-profile-name {
 		float: left;
-		font-size: 2.6em;
+		font-size: 2.5em;
 		font-weight: 300;
 		padding-bottom:20px;
 
@@ -97,7 +101,7 @@
 		.section-title {
 			font-size: 2em;
 			font-weight:300;
-			margin-bottom:30px;
+			margin-bottom:15px;
 			margin-top: 40px;
 		}
 
@@ -126,6 +130,7 @@
 		}
 
 		.group {
+			margin-top: 7px;
 		}
 
 		.text-data, .boolean-data {
